fixing merge issue with assembly flags for x86_64 support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,9 @@ endif()
 if(DEFINED NE10_LINUX_TARGET_ARCH)
     if(${NE10_LINUX_TARGET_ARCH} STREQUAL "armv7")
         set(NE10_TARGET_ARCH "armv7")
-    else()
+    elseif(${NE10_LINUX_TARGET_ARCH} STREQUAL "x86_64")
+        set(NE10_TARGET_ARCH "x86_64")
+	else()
         set(NE10_TARGET_ARCH "aarch64")
     endif()
 endif()
